2003-11-28 18:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.[hm]: Slight modification allCustomSubclassesOf: 
	previously there was a special case which added NSPanel for NSWindow.
	That has been taken out.
	* GormCustomClassInspector.m: Call method in class manager to 
	get the subclasses.  Undoes previous change for Report #6345.
	See that report on savannah for more information.
	* Palettes/2Controls/GormNSSliderInspector.gorm: Changed Disabled
	checkbox to "Enabled" since this is the way it was being treated
	in the code and this is how it's done across the rest of the app.

2003-11-24 01:37 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Minor change to correct assertion failure.
	
2003-11-23 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.5.0

2003-11-23 15:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.[hm]: Added method allSubclassesOf: to get all
	subclasses whether custom or not.
	* GormCustomClassInspector.m: Call new method in class manager to 
	get the subclasses.  Corrects Report #6345.
	
2003-11-23 10:08 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m: Added flag to allow resizing of 
	the panel in Gorm.  Corrects Report #6344.

2003-11-19 01:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed AUTORELEASE from creation of placeholders
	for both the image and the sound.   This was causing a segfault.
	
2003-11-15 16:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormViewWithContectViewEditor.m: Added methods 
	_shouldBeVertical and _sortByPosition:isVertical: and 
	enhanced the groupSelectionInSplitView method to allow 
	positional orientation of the splitview.  The user should
	now expect the splitview to be built based on the relative 
	position of the views in the window being edited.  This fix 
	addresses Report/Bug #5253.
	